--- a/css/index.css
+++ b/css/index.css
@@ -48,7 +48,7 @@ table {
 } 
 body {
     text-align: center; 
-    margin: 10% 0;
+    margin: 5% 0;
 }
 header {
     font-size: 2.5em;
@@ -60,10 +60,15 @@ header {
     /* background-color: brown; */
     overflow: hidden;
 }
-.header {
-    width: 75%;
-    /* background-color: aqua; */
+.container {
+    width: 1200px;
     margin: auto;
+}
+.header {
+    /* width: 75%; */
+    width: 100%;
+    /* background-color: aqua; */
+    /* margin: auto; */
     /* border: 1px; */
     text-align: left;
     /* border-style: solid; */
@@ -71,65 +76,94 @@ header {
 }
 .images {
     /* width: 1400px; */
-    width: 75%;
-    height: 100%;
+    /* width: 75%; */
+    width: 1200px;
+    /* width: auto; */
+    /* height: 100%; */
+    height: 600px;
     margin: auto;
     /* border-style: solid; */
     /* border-color: white; */
     /* border: 9px; */
 }
 .image-group {
-    height: 600px;
-    width: 1200px;
-    padding: 0;
-    margin: 0;
+    /* height: 600px;
+    width: 1200px; */
+    height: 100%;
+    width: 100%;
+    /* padding: 0;
+    margin: 0; */
 }
 .image-group:nth-of-type(odd) div:nth-of-type(1) {
     width: 50%;
     height: 100%;
     float: left;
+    /* margin: 1px; */
 }
 .image-group:nth-of-type(odd) div:nth-of-type(1) img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    /* object-fit: cover; */
+    object-fit: contain;
+    border-style: solid;
+    border-color: white;
+    border-width: 1px;
 }
 
 .image-group:nth-of-type(odd) div:not(:nth-of-type(1)) {
     width: 25%;
     height: 50%;
     float: left;
+    /* margin: 1px; */
 }
 .image-group:nth-of-type(odd) div:not(:nth-of-type(1)) img {
     width: 100%;
     height: 100%;
+    border-style: solid;
+    border-color: white;
+    border-width: 1px;
 }
 .image-group:nth-of-type(even) div:nth-of-type(1) {
     width: 50%;
     height: 100%;
     float: right;
+    /* margin: 1px; */
 }
 .image-group:nth-of-type(even) div:nth-of-type(1) img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-style: solid;
+    border-color: white;
+    border-width: 1px;
 }
 
 .image-group:nth-of-type(even) div:not(:nth-of-type(1)) {
     width: 25%;
     height: 50%;
     float: right;
+    /* margin: 1px; */
 }
 .image-group:nth-of-type(even) div:not(:nth-of-type(1)) img {
     width: 100%;
     height: 100%;
+    border-style: solid;
+    border-color: white;
+    border-width: 1px;
 }
-.more {
+#more {
     /* clear: both; */
     display: block;
     text-decoration: underline;
+    margin-top: 20px;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 1em;
 }
 body {
     /* border: 2px;
     border-style: solid; */
+}
+html {
+    height: 125%;
 }
