--- a/css/index.css
+++ b/css/index.css
@@ -158,9 +158,14 @@ header {
     clear: both;
     /* margin-top: 20px; */
     padding-top: 20px;
-    font-weight: bold;
+    /* font-weight: bold; */
     text-transform: uppercase;
     font-size: 1em;
+    display: inline-block;
+}
+#more a:hover {
+    background-color: black;
+    color: white;
 }
 body {
     /* border: 2px;
