--- a/css/index.css
+++ b/css/index.css
@@ -153,7 +153,6 @@ p {
 }
 
 #app {
-    /* background-color: brown; */
     overflow: hidden;
 }
 
@@ -163,50 +162,32 @@ p {
 }
 
 .header {
-    /* width: 75%; */
     width: 100%;
-    /* background-color: aqua; */
-    /* margin: auto; */
-    /* border: 1px; */
     text-align: left;
-    /* border-style: solid; */
     text-transform: uppercase;
 }
 
 .images {
-    /* width: 1400px; */
-    /* width: 75%; */
     width: 1200px;
-    /* width: auto; */
-    /* height: 100%; */
     height: 600px;
     margin: auto;
-    /* border-style: solid; */
-    /* border-color: white; */
-    /* border: 9px; */
 }
 
 .image-group {
-    /* height: 600px;
-    width: 1200px; */
     height: 100%;
     width: 100%;
-    /* padding: 0;
-    margin: 0; */
 }
 
 .image-group:nth-of-type(odd) div:nth-of-type(1) {
     width: 50%;
     height: 100%;
     float: left;
-    /* margin: 1px; */
 }
 
 .image-group:nth-of-type(odd) div:nth-of-type(1) img {
     width: 100%;
     height: 100%;
-    /* object-fit: cover; */
-    object-fit: contain;
+    object-fit: cover;
     border-style: solid;
     border-color: white;
     border-width: 1px;
@@ -216,7 +197,6 @@ p {
     width: 25%;
     height: 50%;
     float: left;
-    /* margin: 1px; */
 }
 
 .image-group:nth-of-type(odd) div:not(:nth-of-type(1)) img {
@@ -231,7 +211,6 @@ p {
     width: 50%;
     height: 100%;
     float: right;
-    /* margin: 1px; */
 }
 
 .image-group:nth-of-type(even) div:nth-of-type(1) img {
@@ -247,7 +226,6 @@ p {
     width: 25%;
     height: 50%;
     float: right;
-    /* margin: 1px; */
 }
 
 .image-group:nth-of-type(even) div:not(:nth-of-type(1)) img {
@@ -259,13 +237,10 @@ p {
 }
 
 #more {
-    /* clear: both; */
     display: block;
     text-decoration: underline;
     clear: both;
-    /* margin-top: 20px; */
     padding-top: 20px;
-    /* font-weight: bold; */
     text-transform: uppercase;
     font-size: 1em;
     display: block;
@@ -278,11 +253,6 @@ p {
 #more a:hover {
     color: white;
     background-color: black;
-}
-
-body {
-    /* border: 2px;
-    border-style: solid; */
 }
 
 html {
