--- a/css/index.css
+++ b/css/index.css
@@ -187,7 +187,7 @@ p {
 .image-group:nth-of-type(odd) div:nth-of-type(1) img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     border-style: solid;
     border-color: white;
     border-width: 1px;
